<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/general_bg_dialog"
    android:gravity="center"
    android:orientation="vertical">

    <id.co.minumin.uikit.MinuminTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:text="@string/dialog_title_water_consumption" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/line_gray" />

    <id.co.minumin.uikit.MinuminTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/settings_text_total"
        app:minumin_text_code="p_a_s"
        app:minumin_text_color="dark" />


    <id.co.minumin.uikit.MinuminFormEditText
        android:id="@+id/register_form_water"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:minumin_input_type="number"
        app:minumin_show_error="false"
        app:minumin_text_error="@string/dialog_error_water_consumption"
        app:minumin_text_hint="@string/dialog_hint_water_consumption"
        app:minumin_text_unit="@string/general_text_ml" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:background="@drawable/general_selector_button"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/general_text_choose"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_11sdp" />
</LinearLayout>