<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingBottom="@dimen/_20sdp">

        <id.co.minumin.uikit.MinuminTextView
            android:id="@+id/register_textview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/register_text_title"
            app:minumin_text_code="h6_B"
            app:minumin_text_color="dark" />

        <id.co.minumin.uikit.MinuminTextView
            android:id="@+id/register_textview_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/register_text_message"
            app:minumin_text_code="p_a_r"
            app:minumin_text_color="dark" />

        <id.co.minumin.uikit.MinuminTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/register_text_gender"
            app:minumin_text_code="p_a_s"
            app:minumin_text_color="dark" />


        <id.co.minumin.uikit.MinuminTextView
            android:id="@+id/register_textview_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/register_error_gender"
            android:visibility="gone"
            app:minumin_text_code="h7_S"
            app:minumin_text_color="error" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/register_imageview_man"
                        android:layout_width="@dimen/_75sdp"
                        android:layout_height="@dimen/_75sdp"
                        android:src="@drawable/register_ic_man" />

                    <ImageView
                        android:id="@+id/register_imageview_circle_man"
                        android:layout_width="@dimen/_75sdp"
                        android:layout_height="@dimen/_75sdp"
                        android:src="@drawable/general_shape_circle_blueoutline"
                        android:visibility="invisible" />
                </FrameLayout>

                <id.co.minumin.uikit.MinuminTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/register_text_man"
                    app:minumin_text_code="p_a_r"
                    app:minumin_text_color="dark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/register_imageview_woman"
                        android:layout_width="@dimen/_75sdp"
                        android:layout_height="@dimen/_75sdp"
                        android:src="@drawable/register_ic_woman" />

                    <ImageView
                        android:id="@+id/register_imageview_circle_woman"
                        android:layout_width="@dimen/_75sdp"
                        android:layout_height="@dimen/_75sdp"
                        android:src="@drawable/general_shape_circle_pinkoutline"
                        android:visibility="invisible" />
                </FrameLayout>

                <id.co.minumin.uikit.MinuminTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/register_text_woman"
                    app:minumin_text_code="p_a_r"
                    app:minumin_text_color="dark" />
            </LinearLayout>
        </LinearLayout>

        <id.co.minumin.uikit.MinuminTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/register_text_weight"
            app:minumin_text_code="p_a_s"
            app:minumin_text_color="dark" />

        <id.co.minumin.uikit.MinuminFormEditText
            android:id="@+id/register_form_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:minumin_input_type="number"
            app:minumin_max_length="3"
            app:minumin_show_error="false"
            app:minumin_text_error="@string/register_text_weight_error"
            app:minumin_text_hint="@string/register_text_weight_hint"
            app:minumin_text_unit="@string/general_text_kilograms" />

        <id.co.minumin.uikit.MinuminTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/register_text_sleeping_time"
            app:minumin_text_code="p_a_s"
            app:minumin_text_color="dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <id.co.minumin.uikit.MinuminFormEditText
                android:id="@+id/register_form_wakeuptime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:minumin_input_type="time"
                app:minumin_show_error="false"
                app:minumin_text_error="@string/register_text_sleeping_error"
                app:minumin_text_hint="@string/register_text_sleeping_hint"
                app:minumin_text_unit="@string/register_text_sleeping_am" />

            <View
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@color/dark_textview" />

            <id.co.minumin.uikit.MinuminFormEditText
                android:id="@+id/register_form_sleeptime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:minumin_input_type="time"
                app:minumin_show_error="false"
                app:minumin_text_error="@string/register_text_sleeping_error"
                app:minumin_text_hint="@string/register_text_sleeping_hint"
                app:minumin_text_unit="@string/register_text_sleeping_pm" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_80sdp"
            android:background="@drawable/general_selector_button"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/general_text_next"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_11sdp" />
    </LinearLayout>
</ScrollView>