<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/general_bg_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <id.co.minumin.uikit.MinuminTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:text="@string/dialog_title_physical" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/line_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/physical_relativelayout_extra"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_10sdp">

            <id.co.minumin.uikit.MinuminTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:text="@string/dialog_text_physical_extraactive"
                app:drawableStartCompat="@drawable/general_ic_bodyextraactive"
                app:minumin_text_code="p_a_r" />

            <id.co.minumin.uikit.MinuminTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/dialog_value_physical_extraactive"
                android:textColor="@color/blue_primary" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/line_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/physical_relativelayout_active"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_10sdp">

            <id.co.minumin.uikit.MinuminTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:text="@string/dialog_text_physical_active"
                app:drawableStartCompat="@drawable/general_ic_bodyactive"
                app:minumin_text_code="p_a_r" />

            <id.co.minumin.uikit.MinuminTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/dialog_value_physical_active"
                android:textColor="@color/blue_primary" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/line_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/physical_relativelayout_normal"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_10sdp">

            <id.co.minumin.uikit.MinuminTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:text="@string/dialog_text_physical_normal"
                app:drawableStartCompat="@drawable/general_ic_bodynormal"
                app:minumin_text_code="p_a_r" />

            <id.co.minumin.uikit.MinuminTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/dialog_value_physical_normal"
                android:textColor="@color/blue_primary" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>