<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/general_bg_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/general_bg_circle_gray"
            android:padding="@dimen/_20sdp"
            android:src="@drawable/general_ic_database" />

        <id.co.minumin.uikit.MinuminTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/backupdialog_title_success"
            app:minumin_text_code="h6_B" />

        <id.co.minumin.uikit.MinuminTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/backupdialog_text_success"
            app:minumin_text_code="p_a_r" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/backupdialog_button_dismiss"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/general_bg_blueborder"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/general_text_understand"
                android:textAllCaps="false"
                android:textColor="@color/blue_primary"
                android:textSize="@dimen/_11sdp" />

            <View
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/backupdialog_button_explore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/general_selector_button"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/general_text_explore"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>